admin menu added

--- a/src/app/longterm/itembuttonmenu/item-button-page/item-button-page.component.html
+++ b/src/app/longterm/itembuttonmenu/item-button-page/item-button-page.component.html
@@ -138,7 +138,7 @@
             </svg> Save
         </button>
         <button class="border border-white btn btn-info btn-lg ftrbtn" style="width:25%;" id="btnAdminMenu"
-            aria-label="Left Align">
+            (click)="openAdminMenu()"    aria-label="Left Align">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                 class="bi bi-x-circle-fill" viewBox="0 0 16 16">
                 <path
