--- a/src/app/longterm/saletran/sales-cart/sales-cart.component.html
+++ b/src/app/longterm/saletran/sales-cart/sales-cart.component.html
@@ -1,5 +1,6 @@
 <div class="container-fluid" style="width:100%">
-    <app-deptlist [deptList]="deptList" (deptClicked)="deptClicked($event)">
+    <app-deptlist [deptList]="deptList" (deptClicked)="deptClicked($event)"
+    [deptListRefreshEvent]="deptListRefreshEvent">
     </app-deptlist>
 </div>
 <div class="container-fluid" style="width:100%">
@@ -19,7 +20,8 @@
 <app-child [salesItemListRefreshEvent]="salesItemListRefresh.asObservable()"></app-child>
 <div class="footer fixed-bottom cncsnFooter">
     <div id="stButtonBottomBar" class="row">
-        <button class="border border-white btn btn-info btn-lg ftrbtn goToST"`style="width:20%;" id="btnCustDetails" aria-label="Left Align" (click)="btnCustDetailsClick($event)">
+
+        <button class="border border-white btn btn-info btn-lg ftrbtn goToST" style="width:20%;" id="btnCustDetails" aria-label="Left Align" (click)="btnCustDetailsClick($event)">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-fill" viewBox="0 0 16 16">
                 <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"></path>
             </svg> Customer
