--- a/src/app/longterm/saletran/tender/concession-card-tndr/concession-card-tndr.component.html
+++ b/src/app/longterm/saletran/tender/concession-card-tndr/concession-card-tndr.component.html
@@ -11,10 +11,10 @@
             </tr>
             <tr><td style="width:50%;"></td>
                 <td style="text-align: left;">
-                {{dcCurrSymbl}}{{tenderAmount}}
+                {{dcCurrSymbl}}{{tenderAmountDC}}
                 </td>
                 <td style="text-align: right;">
-                {{ndcCurrSymbl}}{{tenderAmountFC}}
+                {{ndcCurrSymbl}}{{tenderAmountNDC}}
                 </td>
             </tr>
         </table>
