--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+@import './styles/theme.css';
+
 .customer-list-scrollbar {
     position: relative;
     width: 100%;
