--- a/src/app/longterm/saletran/tender/eg-conc-tndr/eg-conc-tndr.component.html
+++ b/src/app/longterm/saletran/tender/eg-conc-tndr/eg-conc-tndr.component.html
@@ -28,21 +28,21 @@
 
 <div class="footer fixed-bottom cncsnFooter">
     <div class="row">
-        <button #btnApprove class="border border-white btn btn-info btn-lg ftrbtn" id="btnApprove"
+        <button #btnApprove class="border border-white btn btn-info btn-lg ftrbtn" id="btnApprove" style="width: 33%;"
             aria-label="Left Align" (click)="btnApproveClick($event)">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-fill"
                 viewBox="0 0 16 16">
                 <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"></path>
             </svg> Approve
         </button>
-        <button #btnDecline class="border border-white btn btn-info btn-lg ftrbtn" id="btnDecline"
+        <button #btnDecline class="border border-white btn btn-info btn-lg ftrbtn" id="btnDecline" style="width: 33%;"
             aria-label="Left Align" (click)="btnDeclineClick($event)">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-fill"
                 viewBox="0 0 16 16">
                 <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"></path>
             </svg> Decline
         </button>
-        <button #btnCancel class="border border-white btn btn-info btn-lg ftrbtn" id="btnCancel" aria-label="Left Align"
+        <button #btnCancel class="border border-white btn btn-info btn-lg ftrbtn" id="btnCancel" aria-label="Left Align" style="width: 33%;"
             (click)="btnCancelClick($event)">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-fill"
                 viewBox="0 0 16 16">
