--- a/src/app/longterm/saletran/checkout/part-pay/part-pay.component.html
+++ b/src/app/longterm/saletran/checkout/part-pay/part-pay.component.html
@@ -1,21 +1,21 @@
 <div style="margin-left: 0.2in;">
-<table *ngIf="showPartPay">
-    <tr>
-        <td>Part Pay&nbsp;</td>
-        <td></td>
-        <td>%</td>
-        <td>
-            
-            <input type="text" id="partPayPercent" [disabled]="disablePartPay" placeholder="Part Pay Percent %" class="dc partpay form-control" [ngModel]="partPayPercent" (change)="onPartPayPercent($event)" (keydown)="keyValidate($event)" />
-            
-        </td>
-        <td></td>
-        <td>{{defaultCurr}}</td>
-        <td>
-            
-            <input type="text" id="partPayAmount" [disabled]="disablePartPay" placeholder="Part Pay Amount"  class="ndc partpay form-control" [ngModel]="partPayAmount" (change)="onPartPayAmount($event)" (keydown)="keyValidate($event)" />
-            
-        </td>
-    </tr>    
-</table> 
+    <table *ngIf="showPartPay">
+        <tr>
+            <td>Part Pay&nbsp;</td>
+            <td></td>
+            <td>%</td>
+            <td>
+                <input type="text" id="partPayPercent" [disabled]="disablePartPay" placeholder="Part Pay Percent %"
+                    class="dc partpay form-control" [ngModel]="partPayPercent" (change)="onPartPayPercent($event)"
+                    (keydown)="keyValidate($event)" />
+            </td>
+            <td></td>
+            <td>{{defaultCurr}}</td>
+            <td>
+                <input type="text" id="partPayAmount" [disabled]="disablePartPay" placeholder="Part Pay Amount"
+                    class="ndc partpay form-control" [ngModel]="partPayAmount" (change)="onPartPayAmount($event)"
+                    (keydown)="keyValidate($event)" />
+            </td>
+        </tr>
+    </table>
 </div>
