--- a/src/app/logon/vendorlt/vendorlt.component.html
+++ b/src/app/logon/vendorlt/vendorlt.component.html
@@ -32,6 +32,38 @@
                 <button name="btnSubmit" id="btnSubmit" class="btn btn-primary" (click)="DoLogon($event)">Logon</button>
             </div>
         </div>
+        
+        <div class="test-devices-section">
+            <div class="test-devices-container">
+                <h6 class="test-devices-title">Test Devices</h6>
+                <div class="test-buttons-grid">
+                    <button class="btn btn-test test-receipt-printer" (click)="testReceiptPrinter()" title="Test Receipt Printer">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 16 16">
+                            <path d="M5 1a2 2 0 0 1 2-2h2a2 2 0 0 1 2 2v1h3a2 2 0 0 1 2 2v3a2 2 0 0 1-2 2h-1v2a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-2H2a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h3V1zm0 5a1 1 0 1 0 0 2 1 1 0 0 0 0-2z"/>
+                        </svg>
+                        <span>Test Receipt Printer</span>
+                    </button>
+                    <button class="btn btn-test test-tag-printer" (click)="testTagPrinter()" title="Test Tag Printer">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 16 16">
+                            <path d="M8 1a2 2 0 0 1 2 2v4H6V3a2 2 0 0 1 2-2zm3 6V3a3 3 0 0 0-3-3H8a3 3 0 0 0-3 3v4a2 2 0 0 0-2 2v5a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2v-5a2 2 0 0 0-2-2z"/>
+                        </svg>
+                        <span>Test Tag Printer</span>
+                    </button>
+                    <button class="btn btn-test test-pinpad" (click)="testPinpad()" title="Test Pinpad">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 16 16">
+                            <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4zm2-1a1 1 0 0 0-1 1v1h14V4a1 1 0 0 0-1-1H2z"/>
+                            <path d="M1 8v3a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V8H1z"/>
+                        </svg>
+                        <span>Test Pinpad</span>
+                    </button>
+                    <button class="btn btn-test test-signature-pad" (click)="testSignaturePad()" title="Test Signature Pad">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 16 16">
+                            <path d="M8.5.5a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 12.293V1a.5.5 0 0 1 .5-.5z"/>
+                        </svg>
+                        <span>Test Signature Pad</span>
+                    </button>
+                </div>
+            </div>
         <div id="nolocationsalert" class="alert alert-warning" role="alert" style="display:none">
             No Locations matched the given Exchange Number
         </div>
